# crew-ai

./: .gitignore  README.md  pyproject.toml
src/crew_ai/: crew.py  main.py
src/crew_ai/config/: agents.yaml  tasks.yaml
