[tool.poetry]
name = "crew-ai"
version = "0.1.0"
description = "CrewAI project"
authors = ["Your Name <jadsonwelder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
crewai = "*"
python-dotenv = "*"
PyYAML = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
